# Blog-Api

./: .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/account/: admin.py  apps.py  models.py  pagination.py  serializers.py  signals.py  tasks.py  urls.py  views.py
app/account/migrations/: 0001_initial.py  0002_alter_user_email_verifytoken.py  0003_alter_verifytoken_activation_date_and_more.py  0004_alter_verifytoken_first_name_and_more.py
app/api/: urls.py
app/blog/: admin.py  models.py  serializers.py  test_api_blog.py  urls.py  views.py
app/blog/migrations/: 0001_initial.py  0002_alter_blog_user_alter_post_blog.py  0003_blog_title.py  0004_readstatus.py  0005_alter_blog_title.py  0006_remove_blog_title.py
app/django_app/: celery.py  dashboard.py
app/django_app/settings/: advanced_settings.py  settings.py
app/runner/: django_create_superuser.sh  django_load_dumps.sh  django_run.sh
app/test_dump/management/commands/: make_dump.py  wait_for_db.py
app/tests/: conftest.py  test_api_blog.py
app/utils/: mail_service.py
makefiles/: python.make
