[tool.poetry]
name = "app"
version = "0.1.0"
description = "Blog-API"
authors = ["AlexanderZug <alexandertsygankov.unterwegs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.6"
djangorestframework = "^3.16.1"
drf-yasg = "^1.21.11"
python-dotenv = "^1.1.1"
drf-spectacular = "^0.28.0"
django-grappelli = "^4.0.2"
celery = "^5.5.3"
redis = "^6.4.0"
django-celery-beat = "^2.8.1"
psycopg2-binary = "^2.9.9"
mimesis = "^18.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
ruff = "^0.13.2"
mypy = "^1.18.2"
django-stubs = "^5.2.5"
djangorestframework-stubs = "^3.16.3"
pytest-django = "^4.11.1"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
	"UP", # pyupgrade
	"B", # flake8-bugbear
	"F", # pyflakes
	"E", # pycodestyle
	"DJ", # flake8-django
	"I", # isort
	"N", # pep8-naming
	"C4", # flake8-comprehensions
]

ignore = [
	"DJ007", # Do not use __all__ with ModelForm, use fields instead
]

exclude = [
	"app/*/migrations/*",
	"app/django_app/settings/*",
	"app/*/__init__.py",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
exclude = [
	"migrations",
	"app/django_app/settings/*",
	"app/*/__init__.py",
]

[tool.django-stubs]
django_settings_module = "django_app.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_app.settings.settings_test"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
addopts = ["--cov=app"]
